--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-mecury-test" class="navigator-link ">
-                    <span>suites.xml</span>
+                    <span>D:\WORKING\shopeeTestQC\src\execution\suites.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -136,7 +136,7 @@
         </div> <!-- panel mecury-test -->
         <div panel-name="test-xml-mecury-test" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/Users/lap01231/Documents/eclipse-workspace/shopeeTestQC/src/execution/suites.xml</span>
+            <span class="header-content">D:\WORKING\shopeeTestQC\src\execution\suites.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -195,12 +195,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'TestLogin')
 data.setCell(0, 2, 'com.mecury.tests.LoginMecury')
-data.setCell(0, 3, 10469);
+data.setCell(0, 3, 33021);
 window.suiteTableData['mecury-test']= { tableData: data, tableDiv: 'times-div-mecury-test'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 33 seconds</span>
               <div id="times-div-mecury-test">
               </div> <!-- times-div-mecury-test -->
             </div> <!-- times-div -->
@@ -227,17 +227,13 @@ return data;
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
               <div class="chronological-class-name">com.mecury.tests.LoginMecury</div> <!-- chronological-class-name -->
-              <div class="configuration-test before">
-                <span class="method-name">initBrowser</span>
-                <span class="method-start">0 ms</span>
-              </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">TestLogin(shopeetest, Shopee@2020)</span>
-                <span class="method-start">2118 ms</span>
+                <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">quitBrowser</span>
-                <span class="method-start">12591 ms</span>
+                <span class="method-start">33023 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
